Git: 	switch to use include-if for directory based default config and per-machine custom config via includes 	Add example .gitconfig-personal-oss 	Remove default user from .gitconfig as it has been replaced by includes 	Remove atom as the default editor and invalid excludesfiles value
Zsh:
	Add bash history control
	Port in zsh specific config from ~/.zshrc so it’s more portable across machines
		theme and auto title
	Fix less arguments
	Add directory aliases
	Update nvm to latest setup style
	Add groovy
	Bump add-daily-key to 10 hours to exceed a typical dev day

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,10 +1,14 @@
 [core]
-	excludesfiles = ~/.gitignore_global
 	excludesfile = ~/.gitignore_global
-	editor = atom-beta --wait
-[user]
-	name = justinaray
-	email = justin@example.com
+
 [alias]
 	ll = log --oneline
 	recent = --no-pager log --oneline -20
+
+# git configs based on directory structure
+[includeIf "gitdir:~/code/personal/oss/"]
+  path = ~/.gitconfig-personal-oss
+
+# local config for the current dev machine
+[include]
+  path = ~/.gitconfig-custom
