--- a/webDev/.prettierrc.json
+++ b/webDev/.prettierrc.json
@@ -1,4 +1,9 @@
 {
+    "editorConfig": true,
     "printWidth": 100,
-    "singleQuote": true
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": true,
+    "trailingComma": "none",
+    "arrowParens": "avoid"
 }
